<resources>
    <string name="app_name">Play To Win</string>

    //Databases
    <string name="dbname_users">users</string>
    <string name="dbname_user_spins">user_spins</string>
    <string name="dbname_user_feedback">user_feedback</string>
    <string name="dbname_user_account_info">user_account_info</string>

    //fields







    <string name="auth_success">Auth Success</string>
    <string name="auth_failed">Authentication Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="field_score">score</string>
    <string name="spins">spins</string>
    <string name="withdrawals">withdrawals</string>
    <string name="spin_to_win">SPIN TO WIN</string>
    <string name="history">History</string>
    <string name="coins">0</string>


    <!-- LoginActivity Fields -->
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="button_login">Login</string>
    <string name="register_link">Register Here.</string>

    <!-- RegisterActivity Fields -->
    <string name="field_name">name</string>
    <string name="button_register">Register</string>
    <string name="login_link">Already User? Login here.</string>


    <!-- Fragments -->
    <string name="spinner_fragment">SpinnerFragment</string>
    <string name="fragment_signout">Fragment Signout</string>
    <string name="withdraw_fragment">WithdrawFragment</string>
    <string name="withdrawal_method_fragment">WithdrawalMethodFragment</string>
    <string name="history_fragment">HistoryFragment</string>
    <string name="fragment_feedback">FragmentFeedback</string>

    <string name="button_ok">Ok</string>
    <string name="text_feedback">Thanks a lot for your feedback!</string>
    <string name="tv_score">Score</string>
    <string name="tv_date">Date</string>
    <string name="tv_source">Source</string>
    <string name="no_internet">Connection not available.</string>
    <string name="no_internet1">Kindly check your connectivity</string>
    <string name="button_exit"> Exit </string>
    <string name="payment_methods">Choose a payment method</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="google_login">Google Sign In</string>

    //Facebook App ID
    <string name="app_id">2002376223422674</string>
    <string name="about_intro">Hey,glad to see you!</string>
    <string name="about_version">Version:1.5</string>
    <string name="about_heading">If you have any query,feel free to contact us.</string>
    <string name="about_email">hungryus.apps@gmail.com</string>
    <string name="about_watsapp">+91 9815202908</string>
    <string name="about_phone">+91 9815202908</string>
    <string name="about_location">Punjab,India</string>
    <string name="about_copyright">Copyright</string>
    <string name="feedback_intro">Give your Feedback</string>
    <string name="total_coins">Total Coins</string>
    <string name="paytm">Paytm</string>
    <string name="paypal">Paypal</string>
    <string name="account_details">Account Details</string>
    <string name="button_submit">Submit</string>
    <string name="tag">Play To Win</string>
    <string name="line1">Spin and win cash prize worth $1000</string>
    <string name="wheel">Spin The Wheel</string>
    <string name="line2">Win Upto $1000</string>
    <string name="unlimited_spin">Unlimited Spin</string>
    <string name="line3">An ultimate platform to earn some extra bucks!!</string>
    <string name="instant_payments">Instant Payments</string>
    <string name="splash_bottom">Powered by Hungry Us</string>
    <string name="options">Follow below options to sign in!</string>
    <string name="terms">By signing in i agree to terms and conditions of Play To Win.</string>
    <string name="or">OR</string>
    <string name="email_login">Login via email</string>
    <string name="create_account">Create Account</string>
    <string name="email_register">Register via email</string>
    <string name="login_here">Already a User?Login here.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter Your Registered Email</string>
    <string name="terms_conditions">Terms And Conditions</string>
    <string name="submit">Submit</string>
    <string name="sure_sign_out">Are you sure you want to sign out?</string>
    <string name="sign_out">Sign Out</string>
    <string name="summary">Summary</string>
    <string name="thanks">Thanks a lot!</string>
    <string name="empty_field">Input field empty!</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="play">Play</string>
    <string name="contact">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="rate">Rate us</string>
    <string name="hungry">Hungry Us licenses</string>


    //Admob IDs
    <string name="original_admob_app_id">ca-app-pub-1398215125366304~8723405002</string>
    <string name="original_admob_banner_id">ca-app-pub-1398215125366304/3524987982</string>
    <string name="original_admob_interstitial_id">ca-app-pub-1398215125366304/9662488093</string>
    <string name="original_admob_rewarded_id">ca-app-pub-1398215125366304/6115260799</string>

    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_admob_rewarded_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="paytm_account_details">Paytm</string>
    <string name="paypal_account_details">Paypal</string>


</resources>
