<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            >
        </item>

        <item android:id="@+id/nav_rate_app"
            android:title="@string/rate_app">
        </item>

        <item android:id="@+id/nav_feedback"
            android:title="@string/feedback">
        </item>

        <item android:id="@+id/nav_contact_us"
            android:title="@string/contact">
        </item>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_terms_conditions"
            android:title="@string/terms_conditions">
        </item>

        <item
            android:id="@+id/nav_about"
            android:title="@string/about">
        </item>

        <item
            android:id="@+id/nav_logout"
            android:title="Logout">
        </item>

    </group>

</menu>