<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home">
    </item>

    <item
        android:id="@+id/ic_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share">
    </item>

    <item
        android:id="@+id/ic_rate_us"
        android:icon="@drawable/ic_play"
        android:title="@string/rate">
    </item>

    <item
        android:id="@+id/ic_contact_us"
        android:icon="@drawable/ic_contactus"
        android:title="@string/contact">
    </item>

    <item
        android:id="@+id/ic_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout">
    </item>

</menu>