<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context="com.playtowin.hungryusapps.spinnergame.SplashActivity">


    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tag"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/darkRed"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/line1"
                    android:textColor="@color/darkblue"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relLayout2"
        android:layout_below="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wheel"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/darkRed"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/line2"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="30sp"
                    android:textColor="@color/darkRed"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/unlimited_spin"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="30sp"
                    android:textColor="@color/darkRed"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/darkblue"
                    android:text="@string/line3"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout3"
        android:layout_width="match_parent"
        android:layout_below="@+id/relLayout2"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/instant_payments"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/darkRed"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textColor="@color/grayLight"
        />

</RelativeLayout>
