<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkblue"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.playtowin.hungryusapps.spinnergame.HistoryActivity">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Gallery Toolbar -->
            <include layout="@layout/snippet_top_toolbar" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@id/relLayout1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkblue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="@color/darkblue"
                    app:cardElevation="10dp">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_centerHorizontal="true"
                            android:text="@string/tv_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    android:background="#11000000"
                    app:cardBackgroundColor="@color/darkblue"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_centerHorizontal="true"
                            android:text="@string/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    android:background="#11000000"
                    app:cardBackgroundColor="@color/darkblue"
                    app:cardElevation="10dp">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_centerHorizontal="true"
                            android:text="@string/tv_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>




            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkblue">

              <ScrollView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:scrollbars = "vertical"
                  android:scrollbarStyle="insideInset"
                  android:fillViewport="true">

                  <android.support.v7.widget.RecyclerView
                      android:id="@+id/recycler_view"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">


                  </android.support.v7.widget.RecyclerView>

              </ScrollView>



        </RelativeLayout>




</LinearLayout>
